[project]
name = "ocg"
version = "0.1.0"
description = "OpenAPI Client Generator"
authors = [
    {name = "Mouad Kommir",email = "mouadkommir@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.15.2,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
